--- a/index_test.html
+++ b/index_test.html
@@ -14,14 +14,14 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/vendor/aos/aos.css">
+  <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/vendor/bootstrap-icons/bootstrap-icons.css">
+  <link rel="stylesheet" href="assets/vendor/glightbox/css/glightbox.min.css">
+  <link rel="stylesheet" href="assets/vendor/swiper/swiper-bundle.min.css">
 
   <!-- Template Main CSS File -->
   <link rel="stylesheet" href="css/style.css">
@@ -137,7 +137,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Services Section ======= -->
-    <!-- <section id="services">
+    <section id="services">
       <div class="container">
         <div class="row" data-aos="fade-up">
           <div class="col-md-12">
@@ -180,7 +180,7 @@
           </div>
         </div>
       </div>
-    </section> --><!-- End Services Section -->
+    </section><!-- End Services Section -->
 
     <!-- ======= Subscrbe Section ======= -->
     <!-- <section id="subscribe">
