--- a/index_test.html
+++ b/index_test.html
@@ -47,6 +47,7 @@
 
         <h1>Aruba 2023</h1>
         <h2>Let's celebrate as <span class="typed" data-typed-items="Termisha turns 33!"></span></h2>
+        <p>Data for testing</p>
         <div class="actions">
           <a href="#" class="btn-get-started">Accomodations</a>
           <a href="#" class="btn-services">Activities</a>
@@ -104,7 +105,7 @@
           <div class="col-md-12">
             <h3 class="section-title">About Aruba</h3>
             <div class="section-title-divider"></div>
-            <p class="section-description">Featuring picture-perfect weather, gorgeous beaches, and more sunny days than any other island in the Caribbean, 
+            <p>Featuring picture-perfect weather, gorgeous beaches, and more sunny days than any other island in the Caribbean, 
               there’s simply no reason you shouldn’t book an Aruba vacation. 
               Can you already see yourself sitting at the beach, sipping on a cocktail, and dipping your toes in the white sand? And what about dancing the night away or finding 
               your luck at one of our casinos? You are just a few clicks and a flight away from enjoying yourself to the fullest on our One Happy Island.</p>
