--- a/index_test.html
+++ b/index_test.html
@@ -40,7 +40,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <div data-aos="fade-in">
+      <div>
         <div class="hero-logo">
           <img class="" src="img/new_logo.png" alt="VIP Birthday Logo">
         </div>
@@ -64,7 +64,7 @@
       <!-- Uncomment below if you prefer to use a text logo -->
       <!-- <h1 class="logo mr-auto"><a href="index.html">Imperial</a></h1> -->
 
-      <!-- <nav id="navbar" class="navbar">
+      <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
@@ -91,7 +91,7 @@
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav> --><!-- .navbar -->
+      </nav><!-- .navbar -->
 
     </div>
   </header><!-- End Header -->
@@ -100,7 +100,7 @@
 
     <!-- ======= About Section ======= -->
     <section id="about">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
         <div class="row">
           <div class="col-md-12">
             <h3 class="section-title">About Aruba</h3>
@@ -112,7 +112,7 @@
           </div>
         </div>
       </div>
-      <div class="container about-container" data-aos="fade-up" data-aos-delay="200">
+      <div class="container about-container">
         <div class="row">
 
           <div class="col-lg-6 about-img">
